app.json edited

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "swipe-new",
+    "name": "dummy_swipe_app",
     "description": "This project is really great.",
-    "slug": "swipe-new",
+    "slug": "dummy_swipe_app",
     "privacy": "public",
     "sdkVersion": "25.0.0",
     "platforms": ["ios", "android"],
@@ -16,6 +16,9 @@
     },
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.pro_doc.dummy_swipe_app"
     }
   }
 }
