--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "eslint-config-rallycoding": "^3.2.0",
     "expo": "^25.0.0",
+    "latlng-to-zip": "^0.0.1",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-elements": "^0.19.1"
